--- a/recap/nodejs/recap/section15/package.json
+++ b/recap/nodejs/recap/section15/package.json
@@ -22,7 +22,8 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.5.4"
+    "mongoose": "^7.5.4",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.3",
