--- a/recap/nodejs/recap/section20/package.json
+++ b/recap/nodejs/recap/section20/package.json
@@ -26,7 +26,8 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.4",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "pdfkit": "^0.13.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.3",
