--- a/recap/nodejs/recap/section22/package.json
+++ b/recap/nodejs/recap/section22/package.json
@@ -27,7 +27,8 @@
     "mongoose": "^7.5.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
-    "pdfkit": "^0.13.0"
+    "pdfkit": "^0.13.0",
+    "stripe": "^14.3.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.3",
