--- a/projects/NextJS1/promptopia/.env
+++ b/projects/NextJS1/promptopia/.env
@@ -1,3 +1,7 @@
 GOOGLE_ID = 813992920615-35v62s3jj0b40g154md8s2g53m497fgs.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
 MONGODB_URI = mongodb+srv://sheriffkoder:Blackvulture_92@cluster0.jgxkgch.mongodb.net/shopAMZ_13
+
+NEXTAUTH_URL = http://localhost:3001
+NEXTAUTH_URL_INTERNAL = http://localhost:3001
+NEXTAUTH_SECRET=GpsdHGly/E+ANf8Sjx2fyUqXwEJaMpRe/kY1UZqRpys=
