--- a/projects/re-nextjs/package.json
+++ b/projects/re-nextjs/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vis.gl/react-google-maps": "^0.4.1",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
     "next": "14.0.3",
