Apply some next-auth code

--- a/projects/re-nextjs/.env
+++ b/projects/re-nextjs/.env
@@ -1,2 +1,7 @@
 GG_Maps_AP = "AIzaSyDEvXVG5PaMy1kF4bKQdaLQTnqkiYt8C6E"
 GG_Maps_MapId = "b6399eb264718271"
+MONGODB_URI = "mongodb+srv://sheriffkoder:Blackvulture_92@cluster0.jgxkgch.mongodb.net/shopAMZ_13"
+
+AUTH0_DOMAIN = http://localhost:3000
+AUTH0_ID = http://localhost:3000
+AUTH0_SECRET=AuyIgV1wrDNwU3MG+H+0IhK2Uf+4G1wSBO3lKE1jszw=
