--- a/projects/re-nextjs/package.json
+++ b/projects/re-nextjs/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@vis.gl/react-google-maps": "^0.4.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
