--- a/projects/re-nextjs/.env
+++ b/projects/re-nextjs/.env
@@ -2,4 +2,5 @@ GG_Maps_AP = "AIzaSyDEvXVG5PaMy1kF4bKQdaLQTnqkiYt8C6E"
 GG_Maps_MapId = "b6399eb264718271"
 MONGODB_URI = "mongodb+srv://sheriffkoder:Blackvulture_92@cluster0.jgxkgch.mongodb.net/re-next"
 
-NEXTAUTH_SECRET = secret
+NEXTAUTH_SECRET=WeoGC9H2cELHiLobb33RARAPlBSIi9mWHpbV6LAuSUs=
+NEXTAUTH_URL=http://localhost:3000/
