--- a/projects/re-nextjs/.env
+++ b/projects/re-nextjs/.env
@@ -4,3 +4,9 @@ MONGODB_URI = "mongodb+srv://sheriffkoder:Blackvulture_92@cluster0.jgxkgch.mongo
 
 NEXTAUTH_SECRET=WeoGC9H2cELHiLobb33RARAPlBSIi9mWHpbV6LAuSUs=
 NEXTAUTH_URL=http://localhost:3000/
+
+EmailHost = email-smtp.eu-north-1.amazonaws.com
+EmailPort = 587
+EmailUser = AKIARXOOISKKPGABYBTY
+EmailPass = BFI2Z6a3ZGyYBAimDEEVgMUbRXrTbui2RNGeqsCCAW8N
+myEmail = kodersheriff@gmail.com
