--- a/projects/re-nextjs/package.json
+++ b/projects/re-nextjs/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/nodemailer": "^6.4.14",
     "@vis.gl/react-google-maps": "^0.4.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
@@ -17,11 +18,12 @@
     "mongoose": "^8.0.1",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.10.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
