--- a/projects/car-maint--react-rest/package.json
+++ b/projects/car-maint--react-rest/package.json
@@ -15,6 +15,7 @@
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fetch": "^0.0.9",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
