--- a/projects/car-maint-rest-api/package.json
+++ b/projects/car-maint-rest-api/package.json
@@ -10,12 +10,16 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mongoose": "^8.1.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
