--- a/projects/protfolio-threejs-nextjs/package.json
+++ b/projects/protfolio-threejs-nextjs/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.15.16",
     "bcrypt": "^5.1.1",
     "framer-motion": "^11.0.3",
+    "framer-motion-3d": "^11.0.3",
     "maath": "^0.10.7",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
