--- a/projects/protfolio-threejs-nextjs/tsconfig.json
+++ b/projects/protfolio-threejs-nextjs/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "utils/motion.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "utils/motion.js", "components/myModels/index-earth-1tsx"],
   "exclude": ["node_modules"]
 }
