--- a/projects/protfolio-threejs-nextjs/package.json
+++ b/projects/protfolio-threejs-nextjs/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@react-three/drei": "^9.97.0",
     "@react-three/fiber": "^8.15.16",
+    "@react-three/postprocessing": "^2.15.13",
     "bcrypt": "^5.1.1",
     "framer-motion": "^11.0.3",
     "framer-motion-3d": "^11.0.3",
+    "leva": "^0.9.35",
     "maath": "^0.10.7",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
