--- a/projects/protfolio-threejs-nextjs/package.json
+++ b/projects/protfolio-threejs-nextjs/package.json
@@ -12,10 +12,14 @@
     "@react-three/drei": "^9.97.0",
     "@react-three/fiber": "^8.15.16",
     "@react-three/postprocessing": "^2.15.13",
+    "@studio-freight/hamo": "^0.6.28",
+    "@studio-freight/react-lenis": "^0.0.43",
     "bcrypt": "^5.1.1",
     "framer-motion": "^11.0.3",
     "framer-motion-3d": "^11.0.3",
+    "gsap": "^3.12.5",
     "leva": "^0.9.35",
+    "locomotive-scroll": "^4.1.4",
     "maath": "^0.10.7",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
@@ -28,6 +32,7 @@
     "three": "^0.161.0"
   },
   "devDependencies": {
+    "@types/locomotive-scroll": "^4.1.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
