--- a/projects/protfolio-threejs-nextjs/package.json
+++ b/projects/protfolio-threejs-nextjs/package.json
@@ -14,6 +14,7 @@
     "@react-three/postprocessing": "^2.15.13",
     "@studio-freight/hamo": "^0.6.28",
     "@studio-freight/react-lenis": "^0.0.43",
+    "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
     "framer-motion": "^11.0.3",
     "framer-motion-3d": "^11.0.3",
@@ -25,6 +26,7 @@
     "mongoose": "^8.1.1",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.10",
     "react": "^18",
     "react-dom": "^18",
     "react-tilt": "^1.0.2",
