Responsive adjustments @home/projects
- project icons alignment
- add a view all projects button
- adjust the header text and content alignment on large view ports
- add a loading spinner for the currently adjusted 3d models

--- a/projects/protfolio-threejs-nextjs/tsconfig.json
+++ b/projects/protfolio-threejs-nextjs/tsconfig.json
@@ -35,6 +35,6 @@
   "public/icons/close-svg.jsx", 
   "public/icons/caret-down.tsx", 
   "public/icons/caret-down.jsx"
-],
+, "components/myModels/CharCanvas.tsx"],
   "exclude": ["node_modules"]
 }
