--- a/projects/protfolio-threejs-nextjs/tsconfig.json
+++ b/projects/protfolio-threejs-nextjs/tsconfig.json
@@ -35,6 +35,6 @@
   "public/icons/close-svg.jsx", 
   "public/icons/caret-down.tsx", 
   "public/icons/caret-down.jsx"
-, "components/myModels/CharCanvas.tsx"],
+, "components/myModels/CharCanvas.tsx", "components/customComponents/firstComponent/SecondComp.tsx"],
   "exclude": ["node_modules"]
 }
