--- a/projects/re-nextjs/package.json
+++ b/projects/re-nextjs/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/nodemailer": "^6.4.14",
     "@vis.gl/react-google-maps": "^0.4.1",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^2.4.3",
     "dotenv": "^16.3.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
