--- a/projects/re-nextjs/package.json
+++ b/projects/re-nextjs/package.json
@@ -14,6 +14,7 @@
     "@types/nodemailer": "^6.4.14",
     "@vis.gl/react-google-maps": "^0.4.1",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "dotenv": "^16.3.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
